# pycomm3

./: LICENSE  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: pythonpackage.yml
pycomm3/: __init__.py  base.py  bytes_.py  clx.py  com_server.py  const.py  slc.py  socket_.py
pycomm3/packets/: __init__.py  requests.py  responses.py
tests/: conftest.py  test_plc_init.py  test_reads.py  test_writes.py
