[tool.poetry]
name = "pycomm3"
version = "0.1.0"
description = ""
authors = ["Rafael Sales <rafael.sales@startupcode.com.br>"]

[tool.poetry.dependencies]
python = "^3.6"
Autologging = "^1.3.2"

[tool.poetry.dev-dependencies]
pydotplus = "^2.0.2"
coverage = "^5.4"
pycodestyle = "^2.6.0"
yapf = "^0.30.0"
pylint = "^2.6.0"
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
